# BondTrader

./: .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .test_secrets  ARTIFACT_MANAGEMENT.md  CHANGELOG.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_IMPROVEMENTS_SUMMARY.md  GITHUB_PREP_CHECKLIST.md  GITHUB_PUBLISHING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  api_keys.json  cleanup-git-history.sh  env.example  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bondtrader/: __init__.py  config.py  config_pydantic.py
bondtrader/analytics/: __init__.py  advanced_analytics.py  alternative_data.py  backtesting.py  correlation_analysis.py  execution_strategies.py  factor_models.py  floating_rate_bonds.py  key_rate_duration.py  multi_curve.py  oas_pricing.py  portfolio_optimization.py  transaction_costs.py
bondtrader/api/: compliance.py
bondtrader/core/: __init__.py  arbitrage_detector.py  audit.py  base_analytics.py  bond_models.py  bond_models_pydantic.py  bond_valuation.py  circuit_breaker.py  container.py  exceptions.py  factories.py  helpers.py  observability.py  quantlib_integration.py  repository.py  result.py  service_layer.py
bondtrader/data/: __init__.py  data_generator.py  data_persistence.py  data_persistence_enhanced.py  evaluation_dataset_generator.py  market_data.py  postgresql_support.py  training_data_generator.py
bondtrader/ml/: __init__.py  ab_testing.py  automated_retraining.py  automl.py  base_ml_adjuster.py  bayesian_optimization.py  cicd_pipeline.py  data_lineage.py  data_validation.py  drift_detection.py  explainability.py  feature_engineering.py  feature_store.py  ml_adjuster.py  ml_adjuster_enhanced.py  ml_adjuster_unified.py  ml_advanced.py  mlflow_tracking.py  model_persistence.py  model_serving.py  production_monitoring.py  regime_models.py  training_framework.py
bondtrader/risk/: __init__.py  credit_risk_enhanced.py  liquidity_risk_enhanced.py  risk_management.py  tail_risk.py
bondtrader/utils/: __init__.py  auth.py  (+27 more)
docker/: .env.example  Dockerfile.api  Dockerfile.dashboard  Dockerfile.ml-service  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: ARCHIVE.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_ORGANIZATION.md  EVALUATION_ERRORS_SUMMARY.md  EVALUATION_FAILURE_ANALYSIS.md  LOGS_ORGANIZATION.md  ORGANIZATION.md  PRODUCTION_TESTING_READINESS.md  PROJECT_HISTORY.md  README.md
historical_data/: all_bonds_2010_2020.csv  eval_bonds_2010_2020.csv  finra_bonds_2010_2020.csv  fred_treasury_bonds_2010_2020.csv  train_bonds_2010_2020.csv
postman/: BondTrader.postman_collection.json  README.md
sample_data/: README.md  sample_bonds.csv
scripts/: API_TRAINING_README.md  adaptive_evaluation.py  api_helpers.py  api_server.py  clear_artifacts.py  comprehensive_demo.py  dashboard.py  demo_assessment.py  evaluate_models.py  evaluate_trained_models.py  example_api_usage.py  export_openapi.py  fetch_historical_data.py  finra_api_diagnostic.py  further_tune_model.py  generate_sample_data.py  migrate_postgresql_standalone.py  migrate_to_postgresql.py  model_scoring_evaluator.py  refresh_models.py  regenerate_evaluation_dataset.py  run_complete_demo.sh  run_migration_and_tests.py  setup_auth.py  setup_monitoring.sh  setup_secrets.py  streamlit_predictions_dashboard.py  test_finra_api.py  test_system.py  train_all_models.py  train_evaluate_with_api_data.py  train_model_2005.py  train_with_historical_data.py
tests/: README.md  conftest.py  test_arbitrage.py  test_arbitrage_detector.py  test_bond_valuation.py  test_config.py
(+204 files in other folders)
