[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bondtrader"
version = "1.0.0"
description = "Comprehensive Bond Trading & Arbitrage Detection System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sage Hart"}
]
keywords = ["finance", "bonds", "arbitrage", "trading", "risk-management", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.17.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
    "yfinance>=0.2.0",
    "shap>=0.42.0",
    "tqdm>=4.66.0",
    "numba>=0.58.0",
    "pandas-market-calendars>=4.2.1,<5.3.0",  # 4.3.0+ requires Python 3.10+ (uses | union syntax)
    "arch>=6.2.0",
    "statsmodels>=0.14.0",
    "Riskfolio-Lib>=5.0.0",
    "ffn>=0.3.7",
    "cvxpy>=1.4.0",
    "PyPortfolioOpt>=1.5.0",
    "pulp>=2.7.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",
    "optuna>=3.4.0",
    "mlflow>=2.8.0",
    "schedule>=1.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "dask>=2024.1.0",
    "pydantic>=2.5.0",
    "marshmallow>=3.20.0",
    "seaborn>=0.13.0",
    "pandas-datareader>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",
    "hypothesis>=6.92.0",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.12.0",
    "pylint>=3.0.0",
    "pre-commit>=3.5.0",
    "structlog>=24.1.0",
    "loguru>=0.7.2",
]
fastapi = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
monitoring = [
    "sentry-sdk>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bondtrader"
Documentation = "https://github.com/yourusername/bondtrader/blob/main/README.md"
Repository = "https://github.com/yourusername/bondtrader"
Issues = "https://github.com/yourusername/bondtrader/issues"

[tool.setuptools]
packages = ["bondtrader"]

[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 127
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "smoke: Smoke tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["bondtrader"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Test utilities (not meant to be tested themselves)
    "*/utils/hypothesis_helpers.py",
    # Optional dependencies that require system libraries
    "*/core/quantlib_integration.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
